Pass --enable-native-access=ALL-UNNAMED in default mvnd.jvmArgs